--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "debug": "^2.2.0",
     "express": "^4.13.0",
     "jade": "^1.11.0",
-    "recluster": "^0.4.0"
+    "mori": "^0.3.2",
+    "react": "^0.13.3",
+    "recluster": "^0.4.0",
+    "redux": "^0.12.0"
   },
   "devDependencies": {
     "babelify": "^6.1.2",
     "browserify": "^10.2.6",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "vinyl-source-stream": "^1.1.0"
   },
   "config": {
     "port": 3000
