--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "browserify": "^10.2.6",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "livereactload": "^0.6.0",
     "mocha": "^2.2.5",
     "vinyl-source-stream": "^1.1.0"
   },
