--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "debug": "^2.2.0",
     "express": "^4.13.0",
     "jade": "^1.11.0",
+    "livereactload-api": "^0.5.1",
     "mori": "^0.3.2",
     "react": "^0.13.3",
     "recluster": "^0.4.0",
