--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "main": "app/index.js",
   "dependencies": {
     "babel": "^5.6.14",
+    "css-modules-require-hook": "^1.0.3",
     "debug": "^2.2.0",
     "express": "^4.13.0",
     "jade": "^1.11.0",
     "livereactload-api": "^0.5.1",
     "lodash": "^3.10.0",
     "mori": "^0.3.2",
+    "postcss": "^4.1.16",
+    "postcss-modules-extract-imports": "0.0.5",
+    "postcss-modules-local-by-default": "0.0.11",
+    "postcss-modules-scope": "0.0.8",
     "react": "^0.13.3",
     "recluster": "^0.4.0",
     "redux": "^0.12.0"
